Hill Climbing with Dislocation Beta

--- a/Breadth-First Algo/index.html
+++ b/Breadth-First Algo/index.html
@@ -3,5 +3,5 @@ html4/strict.dtd">
 <html>
 <head>
 <title>My Web Page</title>
-<script src="algo1.js"></script>
+<script src="Breadth-First.js"></script>
 </head>
