Hill Climbing with Distance Beta

--- a/Hill Climbing Algo/index.html
+++ b/Hill Climbing Algo/index.html
@@ -3,5 +3,5 @@ html4/strict.dtd">
 <html>
 <head>
 <title>My Web Page</title>
-<script src="Hill_Climbing_Dislocation.js"></script>
+<script src="Hill_Climbing_Distance.js"></script>
 </head>
