--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-violet"><i class="fa fa-tasks"></i></div>
                     <div class="title"><span>Algo.<br>Breath-First Search</span>
-                      <div class="progress">
+                      <!--<div class="progress">
                         <div role="progressbar" style="width: 25%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-violet"></div>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="number"><button type="button" id="bfsalgo" class="btn btn-primary">Run</button></div>
                   </div>
@@ -117,9 +117,9 @@
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-red"><i class="icon-padnote"></i></div>
                     <div class="title"><span>Algo.<br>Hill-climbing</span>
-                      <div class="progress">
+                      <!--<div class="progress">
                         <div role="progressbar" style="width: 70%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-red"></div>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="number"><button type="button" id="hillclimb" class="btn btn-danger">Run</button></div>
                   </div>
@@ -129,9 +129,9 @@
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-green"><i class="icon-bill"></i></div>
                     <div class="title"><span>Algo.<br>A*</span>
-                      <div class="progress">
+                      <!--<div class="progress">
                         <div role="progressbar" style="width: 40%; height: 4px;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-green"></div>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="number"><button type="button" id="astar" class="btn btn-success">Run</button></div>
                   </div>
@@ -140,12 +140,12 @@
                 <div class="col-xl-3 col-sm-6">
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-orange"><i class="icon-check"></i></div>
-                    <div class="title"><span>Edit.<br>Pizzle</span>
-                      <div class="progress">
+                    <div class="title"><span>Algo.<br>IDA*</span>
+                      <!--<div class="progress">
                         <div role="progressbar" style="width: 50%; height: 4px;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-orange"></div>
-                      </div>
+                      </div>-->
                     </div>
-                    <div class="number"><button type="button" class="btn btn-warning">Edit</button></div>
+                    <div class="number"><button type="button" id="idastar" class="btn btn-warning">Run</button></div>
                   </div>
                 </div>
               </div>
@@ -212,9 +212,7 @@
     <script src="vendor/jquery-validation/jquery.validate.min.js"></script>
     <script src="js/charts-home.js"></script>
     <!-- Main File-->
-    <script src="js/bfs.js"></script>
-    <script src="js/hillclimb.js"></script>
-    <script src="js/a_star.js"></script>
+    <script src="js/algo.js"></script>
     <script src="js/app.js"></script>
     <script src="js/front.js"></script>
 
