--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                     </div>
                   <div class="card-body">
                       <div class="eight-puzzle"></div>
+                      <div class="number"><button type="button" id="mapset" class="btn btn-success">Edit</button></div>
                   </div>
                   </div>
                 </div>
