--- a/index.html
+++ b/index.html
@@ -53,6 +53,53 @@
           </div>
         </nav>
       </header>
+
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Edit 8-puzzle</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="container">
+                    <div class="row">
+                      <div class="col">
+                    　<input type="text" id="board1" name="1" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    <div class="col">
+                    　<input type="text" id="board2" name="2" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    <div class="col">
+                      <input type="text" id="board3" name="3" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                    　<input type="text" id="board4" name="4" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    <div class="col">
+                    　<input type="text" id="board5" name="5" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    <div class="col">
+                      <input type="text" id="board6" name="6" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                    　<input type="text" id="board7" name="7" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    <div class="col">
+                    　<input type="text" id="board8" name="8" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    <div class="col">
+                      <input type="text" id="board0" name="0" maxlength="1" style="width:50px; border-radius:5px;"/></div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button id="board-change" type="button" class="btn btn-primary" data-dismiss="modal">save changes</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+
       <div class="page-content d-flex align-items-stretch">
         <!-- Side Navbar -->
         <nav class="side-navbar">
@@ -105,9 +152,9 @@
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-violet"><i class="fa fa-tasks"></i></div>
                     <div class="title"><span>Algo.<br>Breath-First Search</span>
-                      <!--<div class="progress">
+                      <div class="progress">
                         <div role="progressbar" style="width: 25%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-violet"></div>
-                      </div>-->
+                      </div>
                     </div>
                     <div class="number"><button type="button" id="bfsalgo" class="btn btn-primary">Run</button></div>
                   </div>
@@ -117,9 +164,9 @@
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-red"><i class="icon-padnote"></i></div>
                     <div class="title"><span>Algo.<br>Hill-climbing</span>
-                      <!--<div class="progress">
+                      <div class="progress">
                         <div role="progressbar" style="width: 70%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-red"></div>
-                      </div>-->
+                      </div>
                     </div>
                     <div class="number"><button type="button" id="hillclimb" class="btn btn-danger">Run</button></div>
                   </div>
@@ -129,9 +176,9 @@
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-green"><i class="icon-bill"></i></div>
                     <div class="title"><span>Algo.<br>A*</span>
-                      <!--<div class="progress">
+                      <div class="progress">
                         <div role="progressbar" style="width: 40%; height: 4px;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-green"></div>
-                      </div>-->
+                      </div>
                     </div>
                     <div class="number"><button type="button" id="astar" class="btn btn-success">Run</button></div>
                   </div>
@@ -141,9 +188,9 @@
                   <div class="item d-flex align-items-center">
                     <div class="icon bg-orange"><i class="icon-check"></i></div>
                     <div class="title"><span>Algo.<br>IDA*</span>
-                      <!--<div class="progress">
+                      <div class="progress">
                         <div role="progressbar" style="width: 50%; height: 4px;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-orange"></div>
-                      </div>-->
+                      </div>
                     </div>
                     <div class="number"><button type="button" id="idastar" class="btn btn-warning">Run</button></div>
                   </div>
@@ -162,23 +209,27 @@
                   </div>
                 </div>
                 <div class="chart col-lg-4 col-12">
-                  <!-- Bar Chart   -->
-                  <!--<div class="bar-chart has-shadow bg-white">
-                    <div class="title"><strong class="text-violet">95%</strong><br><small>Current Server Uptime</small></div>
-                    <canvas id="barChartHome"></canvas>
-                  </div>-->
-                  <!-- Numbers-->
-                  <!--<div class="statistic d-flex align-items-center bg-white has-shadow">
-                    <div class="icon bg-green"><i class="fa fa-line-chart"></i></div>
-                    <div class="text"><strong>99.9%</strong><br><small>Success Rate</small></div>
-                  </div>-->
                   <div class="card">
+                    <div class="card-close">
+                      <div class="dropdown">
+                        <button type="button" id="closeCard1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
+                        <div aria-labelledby="closeCard1" class="dropdown-menu dropdown-menu-right has-shadow">
+                          <a href="#" class="dropdown-item edit" data-toggle="modal" data-target="#myModal">
+                            <i class="fa fa-gear"></i>
+                            Edit
+                          </a>
+
+
+
+                        </div>
+                      </div>
+                    </div>
                     <div class="card-header d-flex align-items-center">
                       <h3 class="h4">8-pizzle</h3>
+                      <h5 class="h5" id="solveability">(Solvable)</h5>
                     </div>
                   <div class="card-body">
                       <div class="eight-puzzle"></div>
-                      <div class="number"><button type="button" id="mapset" class="btn btn-success">Edit</button></div>
                   </div>
                   </div>
                 </div>
