--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   </div>
                   <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                      <button id="board-change" type="button" class="btn btn-primary" data-dismiss="modal">save changes</button>
+                      <button id="board-change" type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
                   </div>
               </div>
           </div>
@@ -114,7 +114,7 @@
           <!-- Sidebar Navidation Menus--><span class="heading">Main</span>
           <ul class="list-unstyled">
                     <li class="active"><a href="index.html"> <i class="icon-home"></i>Home </a></li>
-                    <li><a href="tables.html"> <i class="icon-grid"></i>Tables </a></li>
+                    <!-- <li><a href="tables.html"> <i class="icon-grid"></i>Tables </a></li>
                     <li><a href="charts.html"> <i class="fa fa-bar-chart"></i>Charts </a></li>
                     <li><a href="forms.html"> <i class="icon-padnote"></i>Forms </a></li>
                     <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Example dropdown </a>
@@ -125,7 +125,7 @@
                       </ul>
                     </li>
                     <li> <a href="#"> <i class="icon-flask"></i>Demo </a></li>
-                    <li> <a href="#"> <i class="icon-screen"></i>Demo </a></li>
+                    <li> <a href="#"> <i class="icon-screen"></i>Demo </a></li> -->
           <!--
          </ul><span class="heading">Extras</span>
           <ul class="list-unstyled">
@@ -153,7 +153,7 @@
                     <div class="icon bg-violet"><i class="fa fa-tasks"></i></div>
                     <div class="title"><span>Algo.<br>Breath-First Search</span>
                       <div class="progress">
-                        <div role="progressbar" style="width: 25%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-violet"></div>
+                        <div role="progressbar" style="width: 100%; height: 4px;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-violet"></div>
                       </div>
                     </div>
                     <div class="number"><button type="button" id="bfsalgo" class="btn btn-primary">Run</button></div>
@@ -165,7 +165,7 @@
                     <div class="icon bg-red"><i class="icon-padnote"></i></div>
                     <div class="title"><span>Algo.<br>Hill-climbing</span>
                       <div class="progress">
-                        <div role="progressbar" style="width: 70%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-red"></div>
+                        <div role="progressbar" style="width: 100%; height: 4px;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-red"></div>
                       </div>
                     </div>
                     <div class="number"><button type="button" id="hillclimb" class="btn btn-danger">Run</button></div>
@@ -177,7 +177,7 @@
                     <div class="icon bg-green"><i class="icon-bill"></i></div>
                     <div class="title"><span>Algo.<br>A*</span>
                       <div class="progress">
-                        <div role="progressbar" style="width: 40%; height: 4px;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-green"></div>
+                        <div role="progressbar" style="width: 100%; height: 4px;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-green"></div>
                       </div>
                     </div>
                     <div class="number"><button type="button" id="astar" class="btn btn-success">Run</button></div>
@@ -189,7 +189,7 @@
                     <div class="icon bg-orange"><i class="icon-check"></i></div>
                     <div class="title"><span>Algo.<br>IDA*</span>
                       <div class="progress">
-                        <div role="progressbar" style="width: 50%; height: 4px;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-orange"></div>
+                        <div role="progressbar" style="width: 100%; height: 4px;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-orange"></div>
                       </div>
                     </div>
                     <div class="number"><button type="button" id="idastar" class="btn btn-warning">Run</button></div>
@@ -204,10 +204,25 @@
               <div class="row">
                 <!-- Line Chart            -->
                 <div class="chart col-lg-8 col-12">
-                  <div class="line-chart bg-white d-flex align-items-center justify-content-center has-shadow">
+                  <div class="line-chart-example card">
+                  <div class="card-close">
+                    <div class="dropdown">
+                      <button type="button" id="closeCard2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>
+                      <div aria-labelledby="closeCard2" class="dropdown-menu dropdown-menu-right has-shadow">
+                        <a href="#" class="dropdown-item edit" id="cleardata">
+                         <i class="fa fa-times"></i>Clear</a>
+                         </div>
+                    </div>
+                  </div>
+                  <div class="card-header d-flex align-items-center">
+                    <h3 class="h4">Manhattan Distance per Move</h3>
+                  </div>
+                  <div class="card-body">
                     <canvas id="lineCahrt"></canvas>
                   </div>
                 </div>
+                </div>
+
                 <div class="chart col-lg-4 col-12">
                   <div class="card">
                     <div class="card-close">
