--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Algorithms of Solving N-puzzle</title>
+    <title>Algorithms of Solving 8-puzzle</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="all,follow">
@@ -42,8 +42,8 @@
               <!-- Navbar Header-->
               <div class="navbar-header">
                 <!-- Navbar Brand --><a href="index.html" class="navbar-brand">
-                  <div class="brand-text brand-big"><span>Algorithms of</span><strong> Solving N-puzzle</strong></div>
-                  <div class="brand-text brand-small"><strong>Algo. Solving N-puzzle</strong></div></a>
+                  <div class="brand-text brand-big"><span>Algorithms of</span><strong> Solving 8-puzzle</strong></div>
+                  <div class="brand-text brand-small"><strong>Algo. Solving 8-puzzle</strong></div></a>
                 <!-- Toggle Button--><a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span></a>
               </div>
               <!-- Navbar Menu -->
